<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SideChannelLeakageHint"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <Button android:id="@+id/Dict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dict"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <Button android:id="@+id/Logging"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logging"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clipboard"
        android:text="@string/clipboard"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>


</LinearLayout>