<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InputValidationsHint"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button android:id="@+id/xssBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xss"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button android:id="@+id/sqliButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Input Validations - SQLi"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button android:id="@+id/wbUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wbviewAccess"
        android:background="#000000"
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <Button android:id="@+id/oscmdi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oscmd"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:enabled="false"/>


</LinearLayout>

